Add avatar and more default params edit

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -77,12 +77,12 @@ sidebar: right
 
 social:
   # email: mailto:xxx@gmail.com
-  # github: https://github.com/yourname
+   github: https://github.com/Nastassia
   # google: https://plus.google.com/yourname
   # twitter: https://twitter.com/yourname
   # facebook: https://www.facebook.com/yourname
   # instagram: https://www.instagram.com/yourname
-  # linkedin: https://www.linkedin.com/in/yourname
+   linkedin: https://www.linkedin.com/in/nastassiacarmona/
   # pinterest: https://www.pinterest.com/yourname
   # youtube: https://www.youtube.com/channel/yourname
   # vimeo: https://vimeo.com/yourname
