--- a/data/friends.yml
+++ b/data/friends.yml
@@ -1,8 +1,8 @@
-- name: D-Sketon
-  url: https://d-sketon.github.io/
-  desc: Hexo 建站
-  image: https://d-sketon.github.io/avatar/avatar.webp
-- name: D-Sketon
-  url: https://d-sketon.github.io/astro-theme-reimu/
-  desc: Astro 建站
-  image: https://d-sketon.github.io/avatar/avatar.webp
+- name: Nastassia
+  url: https://nastassia.github.io/
+  desc: AshaVT
+  image: ../static/images/AshaPekoAvatar.png
+- name: Nastassia
+  url: https://nastassia.github.io/
+  desc: AshaVT
+  image: ../static/images/AshaPekoAvatar.png
